--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-Quebrando Silencio
-
-Há uma sabedoria popular que diz que o silêncio vale ouro. Em termos simples, isso significaria que existem situações em que é melhor não expressar o que se pensa ou sente como forma de minimizar possíveis conflitos. No entanto, há uma linha divisória entre o que é saudável e quando isso se torna abuso. 
+<h1>Quebrando Silencio</h1>
+<br>
+<p></p> Há uma sabedoria popular que diz que o silêncio vale ouro. Em termos simples, isso significaria que existem situações em que é melhor não expressar o que se pensa ou sente como forma de minimizar possíveis conflitos. No entanto, há uma linha divisória entre o que é saudável e quando isso se torna abuso. 
+</p>
 Cada dia que passa o aumento de crianças que sao  abusadas é assustador. O que fazer para ajudar essas crianças? Como criar meios para que essa criança possa se abrir sem se sentir invadida ou culpada?
