--- a/index.html
+++ b/index.html
@@ -1,5 +1,18 @@
-<h1>Quebrando Silencio</h1>
-<br>
-<p>Há uma sabedoria popular que diz que o <b>silêncio vale ouro.</b> Em termos simples, isso significaria que existem situações em que é melhor não expressar o que se pensa ou sente como forma de minimizar possíveis conflitos. No entanto, há uma linha divisória entre o que é saudável e quando isso se torna abuso.</p>  
 
-<p>Cada dia que passa o <mark>aumento de crianças</mark>  que sao  abusadas <b>é assustador</b>. O que fazer para ajudar essas crianças? Como criar meios para que essa criança possa se abrir sem se sentir invadida ou culpada?</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Quebrando o Silencio</title>
+</head>
+<body>
+    <h1>Quebrando Silencio</h1>
+    <br>
+    <p>Há uma sabedoria popular que diz que o <b>silêncio vale ouro.</b> Em termos simples, isso significaria que existem situações em que é melhor não expressar o que se pensa ou sente como forma de minimizar possíveis conflitos. No entanto, há uma linha divisória entre o que é saudável e quando isso se torna abuso.</p> 
+
+
+    <p>Cada dia que passa o <mark>aumento de crianças</mark>  que sao  abusadas <b>é assustador</b>. O que fazer para ajudar essas crianças? Como criar meios para que essa criança possa se abrir sem se sentir invadida ou culpada?</p>
+</body>
+</html>
+
