--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="stile.css">
+    <link rel="stylesheet" href="style.css">
     <title>Quebrando o Silencio</title>
 </head>
 <body>
@@ -16,4 +16,3 @@
     <p>Cada dia que passa o <mark>aumento de crianças</mark>  que sao  abusadas <b>é assustador</b>. O que fazer para ajudar essas crianças? Como criar meios para que essa criança possa se abrir sem se sentir invadida ou culpada?</p>
 </body>
 </html>
-.
