--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <title>Quebrando o Silencio</title>
 </head>
 <body>
-    <h1>Quebrando Silencio</h1>
+    <h1 id="titulo">Quebrando Silencio</h1>
+    <img src="foto" alt="quebrando silencio">
     <br>
-    <p>Há uma sabedoria popular que diz que o <b>silêncio vale ouro.</b> Em termos simples, isso significaria que existem situações em que é melhor não expressar o que se pensa ou sente como forma de minimizar possíveis conflitos. No entanto, há uma linha divisória entre o que é saudável e quando isso se torna abuso.</p> 
+    <p class="texto">Há uma sabedoria popular que diz que o <b>silêncio vale ouro.</b> Em termos simples, isso significaria que existem situações em que é melhor não expressar o que se pensa ou sente como forma de minimizar possíveis conflitos. No entanto, há uma linha divisória entre o que é saudável e quando isso se torna abuso.</p> 
 
 
-    <p>Cada dia que passa o <mark>aumento de crianças</mark>  que sao  abusadas <b>é assustador</b>. O que fazer para ajudar essas crianças? Como criar meios para que essa criança possa se abrir sem se sentir invadida ou culpada?</p>
+    <p class="texto">Cada dia que passa o <mark>aumento de crianças</mark>  que sao  abusadas <b>é assustador</b>. O que fazer para ajudar essas crianças? Como criar meios para que essa criança possa se abrir sem se sentir invadida ou culpada?</p>
 </body>
 </html>
