--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1 id="titulo">Quebrando Silencio</h1>
-    <img src="quebrando silencio.jpeg" alt="quebrando silencio">
+    <img src="quebrando silencio.jpeg" alt="quebrando silêncio">
     <br>
     <p class="texto">Há uma sabedoria popular que diz que o <b>silêncio vale ouro.</b> Em termos simples, isso significaria que existem situações em que é melhor não expressar o que se pensa ou sente como forma de minimizar possíveis conflitos. No entanto, há uma linha divisória entre o que é saudável e quando isso se torna abuso.</p> 
 
