--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
 
 
     <p class="texto">Cada dia que passa o <mark>aumento de crianças</mark>  que sao  abusadas <b>é assustador</b>. O que fazer para ajudar essas crianças? Como criar meios para que essa criança possa se abrir sem se sentir invadida ou culpada?</p>
+<ol>
+    <li>Informaçoes construtivas</li>
+    <li>Direito da criança e do Idoso</li>
+</ol>
+<ul>
+    <li>Para todos</li>
+    <li>Cuidados</li>
+</ul>
+
 </body>
 </html>
 
