--- a/index.html
+++ b/index.html
@@ -8,21 +8,30 @@
     <title>Quebrando o Silencio</title>
 </head>
 <body>
-    <h1 id="titulo">Quebrando Silêncio</h1>
-    <img src="quebrando silencio.jpeg" alt="quebrando silêncio">
-    <br>
-    <p class="texto">Há uma sabedoria popular que diz que o <b>silêncio vale ouro.</b> Em termos simples, isso significaria que existem situações em que é melhor não expressar o que se pensa ou sente como forma de minimizar possíveis conflitos. No entanto, há uma linha divisória entre o que é saudável e quando isso se torna abuso.</p> 
+    <section class="titulo"></section>
+        <h1 id="titulo">Quebrando Silêncio</h1>
+        <img src="quebrando silencio.jpeg" alt="quebrando silêncio">
+        <br>
+    </section>
+    
+    <section class="Conteudo">
+        <p class="texto">Há uma sabedoria popular que diz que o <b>silêncio vale ouro.</b> Em termos simples, isso significaria que existem situações em que é melhor não expressar o que se pensa ou sente como forma de minimizar possíveis conflitos. No entanto, há uma linha divisória entre o que é saudável e quando isso se torna abuso.</p> 
 
 
-    <p class="texto">Cada dia que passa o <mark>aumento de crianças</mark>  que sao  abusadas <b>é assustador</b>. O que fazer para ajudar essas crianças? Como criar meios para que essa criança possa se abrir sem se sentir invadida ou culpada?</p>
-<ol>
-    <li>Informaçoes construtivas</li>
-    <li>Direito da criança e do Idoso</li>
-</ol>
-<ul>
-    <li>Para todos</li>
-    <li>Cuidados</li>
-</ul>
+      <p class="texto">Cada dia que passa o <mark>aumento de crianças</mark>  que sao  abusadas <b>é assustador</b>. O que fazer para ajudar essas crianças? Como criar meios para que essa criança possa se abrir sem se sentir invadida ou culpada?</p>
+      <br>
+    </section>
+
+    <section class="listas">
+        <ol>
+            <li>Informaçoes construtivas</li>
+             <li>Direito da criança e do Idoso</li>
+        </ol>
+        <ul>
+             <li>Para todos</li>
+             <li>Cuidados</li>
+        </ul>
+    </section>
 
 </body>
 </html>
