--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
          <br>
         </section>
     
-        <section class="Conteudo">
+        <section class="conteudo">
             <div class="paragrafo">
             <p class="texto">Há uma sabedoria popular que diz que o <b>silêncio vale ouro.</b> Em termos simples, isso significaria que existem situações em que é melhor não expressar o que se pensa ou sente como forma de minimizar possíveis conflitos. No entanto, há uma linha divisória entre o que é saudável e quando isso se torna abuso.</p> 
             </div>
