--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </ol>
         </div>
         <div class="lista2">
-            <ul>
+            <ul class="lista3">
                 <li>Para todos</li>
                 <li>Cuidados</li>
             </ul>
