--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
          <link rel="stylesheet" href="style.css">
          <title>Quebrando o Silencio</title>
     </head>
+
     <body>
+        <header class="cabecalho">
+            <img id="imagem">
+            <h2>Quebrando Silencio</h2>
+        </header>
+        
         <section class="titulo"></section>
          <h1 id="titulo">Quebrando Silêncio</h1>
          <img src="quebrando silencio.jpeg" alt="quebrando silêncio">
