--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
     <body>
         <header class="cabecalho">
-            <img id="imagem">
+            <img src="quebrando silencio.jpeg">
             <h2>Quebrando Silencio</h2>
         </header>
-        
+
         <section class="titulo"></section>
          <h1 id="titulo">Quebrando Silêncio</h1>
          <img src="quebrando silencio.jpeg" alt="quebrando silêncio">
