--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
     <body>
         <header class="cabecalho">
-            <img src="quebrando silencio.jpeg">
+            <img src="quebrando silêncio.jpeg">
             <h2>Quebrando Silencio</h2>
         </header>
 
         <section class="titulo"></section>
          <h1 id="titulo">Quebrando Silêncio</h1>
-         <img src="quebrando silencio.jpeg" alt="quebrando silêncio">
+         <img src="quebrando silêncio.jpeg" alt="quebrando silêncio">
          <br>
         </section>
     
