--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <body>
         <header class="cabecalho">
-            <img src="quebrando silêncio.jpeg">
+            <img src="quebrando silencio.jpeg">
             <h2>Quebrando Silencio</h2>
         </header>
 
