--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <section class="titulo"></section>
          <h1 id="titulo">Quebrando Silêncio</h1>
-         <img src="quebrando silêncio.jpeg" alt="quebrando silêncio">
+         <img src="quebrando silencio.jpeg" alt="quebrando silencio">
          <br>
         </section>
     
