--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <header class="cabecalho">
             <img src="quebrando silencio.jpeg">
-            <h2>Quebrando Silêncio</h2>
+            <h2>Quebrando o Silêncio</h2>
         </header>
 
         <section class="titulo"></section>
