--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </header>
 
         <section class="titulo"></section>
-         <h1 id="titulo">Quebrando Silêncio</h1>
+         <h1 id="titulo">Quebrando o Silêncio</h1>
          <img src="quebrando silencio.jpeg" alt="quebrando silencio">
          <br>
         </section>
