--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <body>
         <header class="cabecalho">
-            <img src="quebrando silencio.jpeg">
+            <img class="foto" src="quebrando silencio.jpeg">
             <h2>Quebrando o Silêncio</h2>
         </header>
 
